Add assert to check names.